--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,7 @@
 .header-container{
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .header-container .nav-bar {
